paperclip/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperclip
  namespace: paperclip
spec:
  selector:
    app: paperclip
  ports:
    - port: 80
      targetPort: 3100
  type: ClusterIP
